crates/jupytypst/tests/snapshots/kernel_snapshots__page_setup_custom.snap
---
source: crates/jupytypst/tests/kernel_snapshots.rs
expression: "run_case(KernelCase\n{\n    init:\n    KernelInit::new(RenderMode::Svg,\n    SourceMode::Code).with_page_setup(\"set page(fill: red)\"), fixtures:\n    vec![], requests: vec![Request::Execute { input: \"red\" }],\n})"
---
init:
  default_format: Svg
  source_mode: Code
  page_setup: |
  ```typc
  set page(fill: red)
  ```
  inputs: []

--- request 1 ---
kind: execute
input: |
  ```typ
  red
  ```
effective_format: Svg
status: ok
warnings: []
output_kind: svg
output: |
  ```html
  <style>
  .jupytypst-pages {
    display: flex;
    flex-direction: column;
    gap: 12px;
    align-items: flex-start;
  }
  .jupytypst-page {
    max-width: 100%;
    overflow: auto;
  }
  .jupytypst-page > svg {
    display: block;
    max-width: 100%;
    height: auto;
  }
  </style>
  <div class="jupytypst-pages"><div class="jupytypst-page"><svg class="typst-doc" viewBox="0 0 595.2755905511812 841.8897637795276" width="595.2755905511812pt" height="841.8897637795276pt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:h5="http://www.w3.org/1999/xhtml">
      <path class="typst-shape" fill="#ff4136" fill-rule="nonzero" d="M 0 0v 841.8898 h 595.2756 v -841.8898 Z "/>
      <g>
          <g class="typst-group">
              <g>
                  <g class="typst-text" transform="matrix(1 0 0 -1 70.86614173228347 77.55207923228348)">
                      <use xlink:href="#g7B121CE58BC33D056F7790FD32134B10" x="0" y="0" fill="#4b69c6" fill-rule="nonzero"/>
                      <use xlink:href="#g6D0573B153FFEB121B2CD8194B0D9084" x="5.298046875000001" y="0" fill="#4b69c6" fill-rule="nonzero"/>
                      <use xlink:href="#gC487CE9703B5776EAA4A430D261FB904" x="10.596093750000001" y="0" fill="#4b69c6" fill-rule="nonzero"/>
                  </g>
                  <g class="typst-text" transform="matrix(1 0 0 -1 86.76028235728347 77.55207923228348)">
                      <use xlink:href="#g1C6F6E5A8F965D6956C403E9C039B730" x="0" y="0" fill="#000000" fill-rule="nonzero"/>
                  </g>
                  <g class="typst-text" transform="matrix(1 0 0 -1 92.05832923228347 77.55207923228348)">
                      <use xlink:href="#g1BE98B6015DD57E5A6F8A88753094AFA" x="0" y="0" fill="#198810" fill-rule="nonzero"/>
                      <use xlink:href="#g13002BD34BC7CC1E7B825D9402080F54" x="5.298046875000001" y="0" fill="#198810" fill-rule="nonzero"/>
                      <use xlink:href="#gD3D7C45117AC5B165CE05308C47F4150" x="10.596093750000001" y="0" fill="#198810" fill-rule="nonzero"/>
                      <use xlink:href="#gD3D7C45117AC5B165CE05308C47F4150" x="15.894140625000002" y="0" fill="#198810" fill-rule="nonzero"/>
                      <use xlink:href="#gB8F2B8ADD6DE5CB9F4ABDB03432F6CFE" x="21.192187500000003" y="0" fill="#198810" fill-rule="nonzero"/>
                      <use xlink:href="#gAA2A22C40D39C68639AC8538BBB461E7" x="26.490234375000004" y="0" fill="#198810" fill-rule="nonzero"/>
                      <use xlink:href="#g84C7B5C1F278A31AAE1D04BE1A5F65BF" x="31.788281250000004" y="0" fill="#198810" fill-rule="nonzero"/>
                      <use xlink:href="#g74EC6ABE78335022B20647BD62A55DA2" x="37.08632812500001" y="0" fill="#198810" fill-rule="nonzero"/>
                      <use xlink:href="#g1BE98B6015DD57E5A6F8A88753094AFA" x="42.384375000000006" y="0" fill="#198810" fill-rule="nonzero"/>
                  </g>
                  <g class="typst-text" transform="matrix(1 0 0 -1 139.7407511072835 77.55207923228348)">
                      <use xlink:href="#gB9B7546EC337A3A025880ABDA053EB8E" x="0" y="0" fill="#000000" fill-rule="nonzero"/>
                  </g>
              </g>
          </g>
      </g>
      <defs id="glyph">
          <symbol id="g7B121CE58BC33D056F7790FD32134B10" overflow="visible">
              <path d="M 0 0m 4.9628906 3.819922 q -0.25351572 0.19765615 -0.515625 0.28789043 q -0.26210928 0.09023476 -0.5757811 0.09023476 q -0.73906255 0 -1.1300783 -0.4640627 q -0.39101553 -0.46406245 -0.39101553 -1.340625 v -2.3933594 h -0.7949219 v 4.8125 h 0.7949219 v -0.9410155 q 0.19765615 0.511328 0.6080079 0.78417945 q 0.4103515 0.27285194 0.97324204 0.27285194 q 0.2921877 0 0.5457034 -0.07304716 q 0.25351524 -0.073046684 0.4855466 -0.22773409 v -0.8078127 Z "/>
          </symbol>
          <symbol id="g6D0573B153FFEB121B2CD8194B0D9084" overflow="visible">
              <path d="M 0 0m 3.686719 2.444922 q 0 0.8894532 -0.29003906 1.3513672 q -0.2900393 0.46191382 -0.84433603 0.46191382 q -0.5800781 0 -0.8851563 -0.46191382 q -0.30507815 -0.46191406 -0.30507815 -1.3513672 q 0 -0.8894532 0.30722654 -1.3556641 q 0.30722654 -0.46621096 0.8916017 -0.46621096 q 0.54570293 0 0.83574224 0.46835935 q 0.29003906 0.46835947 0.29003906 1.3535157 Z m 0.7906251 -2.135547 q 0 -1.0828125 -0.5113282 -1.6414063 q -0.5113282 -0.55859375 -1.5039065 -0.55859375 q -0.3265624 0 -0.683203 0.060156226 q -0.3566407 0.060156226 -0.7132813 0.1761719 v 0.78203124 q 0.4210937 -0.19765621 0.7648437 -0.2921875 q 0.34375012 -0.0945313 0.63164055 -0.0945313 q 0.6402345 0 0.9324219 0.3480469 q 0.2921877 0.3480469 0.2921877 1.1042969 v 0.034375012 v 0.5371094 q -0.1890626 -0.40390626 -0.51562524 -0.6015625 q -0.3265624 -0.19765624 -0.7949219 -0.19765624 q -0.8421874 0 -1.3449218 0.6746094 q -0.50273436 0.67460936 -0.50273436 1.8046875 q 0 1.1343751 0.50273436 1.8089843 q 0.5027344 0.67460966 1.3449218 0.67460966 q 0.4640627 0 0.7863283 -0.18476582 q 0.32226563 -0.18476582 0.5242188 -0.57148457 v 0.6230469 h 0.7906251 v -4.4859376 Z "/>
          </symbol>
          <symbol id="gC487CE9703B5776EAA4A430D261FB904" overflow="visible">
              <path d="M 0 0m 3.9445314 2.4019532 q 0 0.91953135 -0.2921877 1.3878906 q -0.29218745 0.46835923 -0.8636718 0.46835923 q -0.57578135 0 -0.8722657 -0.47050762 q -0.29648435 -0.47050786 -0.29648435 -1.3857422 q 0 -0.91093755 0.29648435 -1.3835938 q 0.29648435 -0.4726563 0.8722657 -0.4726563 q 0.5714843 0 0.8636718 0.4683594 q 0.2921877 0.46835935 0.2921877 1.3878907 Z m -2.3246095 1.796094 q 0.18906248 0.35234356 0.5220704 0.54140615 q 0.3330078 0.1890626 0.7712889 0.1890626 q 0.8679688 0 1.3664062 -0.66816425 q 0.49843788 -0.668164 0.49843788 -1.8412111 q 0 -1.1902343 -0.50058603 -1.8669921 q -0.50058603 -0.6767578 -1.3728516 -0.6767578 q -0.4296875 0 -0.75839853 0.18691407 q -0.3287109 0.18691407 -0.5263672 0.5435547 v -0.6058594 h -0.79062504 v 6.685938 h 0.79062504 v -2.4878907 Z "/>
          </symbol>
          <symbol id="g1C6F6E5A8F965D6956C403E9C039B730" overflow="visible">
              <path d="M 0 0m 3.8027344 6.677344 q -0.5714843 -0.9796877 -0.8529296 -1.9529295 q -0.28144526 -0.9732423 -0.28144526 -1.9615238 q 0 -0.98398423 0.28144526 -1.9593749 q 0.28144526 -0.9753906 0.8529296 -1.9636719 h -0.6875 q -0.648828 1.0226562 -0.9667969 1.9916016 q -0.31796873 0.9689454 -0.31796873 1.9314452 q 0 0.9582033 0.31796873 1.9292972 q 0.31796885 0.97109365 0.9667969 1.985156 h 0.6875 Z "/>
          </symbol>
          <symbol id="g1BE98B6015DD57E5A6F8A88753094AFA" overflow="visible">
              <path d="M 0 0m 3.8457031 6.4152346 v -2.3847656 h -0.7476561 v 2.3847656 h 0.7476561 Z m -1.6457031 0 v -2.3847656 h -0.7476562 v 2.3847656 h 0.7476562 Z "/>
          </symbol>
          <symbol id="g13002BD34BC7CC1E7B825D9402080F54" overflow="visible">
              <path d="M 0 0m 2.9390626 6.3164063 l -0.4468751 -1.7832031 h 1.0527344 l 0.45117188 1.7832031 h 0.6875 l -0.45117188 -1.7832031 h 1.0484376 v -0.6617186 h -1.2074218 l -0.3609376 -1.4351563 h 1.0742188 v -0.6574218 h -1.241797 l -0.44687486 -1.7789063 h -0.6875 l 0.45117188 1.7789063 h -1.0570314 l -0.45117188 -1.7789063 h -0.6832031 l 0.44687498 1.7789063 h -1.1085937 v 0.6574218 h 1.2761718 l 0.3609376 1.4351563 h -1.1429689 v 0.6617186 h 1.3019531 l 0.4468751 1.7832031 h 0.6875 Z m 0.4468751 -2.4449217 h -1.0527346 l -0.36093736 -1.4351563 h 1.0570312 l 0.35664082 1.4351563 Z "/>
          </symbol>
          <symbol id="gD3D7C45117AC5B165CE05308C47F4150" overflow="visible">
              <path d="M 0 0m 4.5675783 6.685938 v -0.65742207 h -0.898047 q -0.42539072 0 -0.5908203 -0.17402363 q -0.16542983 -0.17402315 -0.16542983 -0.61660147 v -0.42539072 h 1.6542971 v -0.61445284 h -1.6542971 v -4.198047 h -0.79062486 v 4.198047 h -1.2847657 v 0.61445284 h 1.2847657 v 0.33515644 q 0 0.7906251 0.363086 1.164453 q 0.36308575 0.3738284 1.1322265 0.3738284 h 0.9496095 Z "/>
          </symbol>
          <symbol id="gB8F2B8ADD6DE5CB9F4ABDB03432F6CFE" overflow="visible">
              <path d="M 0 0m 3.1582031 5.6246095 l -2.023828 -3.3902345 h 2.023828 v 3.3902345 Z m -0.14179683 0.7906251 h 1.0054686 v -4.1808596 h 0.8550782 v -0.7046875 h -0.8550782 v -1.5296875 h -0.8636718 v 1.5296875 h -2.7199218 v 0.82070315 l 2.578125 4.064844 Z "/>
          </symbol>
          <symbol id="gAA2A22C40D39C68639AC8538BBB461E7" overflow="visible">
              <path d="M 0 0m 1.1601563 0.73046875 h 1.3492188 v 4.9027343 l -1.4523438 -0.3265624 v 0.7906251 l 1.44375 0.31796885 h 0.8679688 v -5.684766 h 1.3320313 v -0.73046875 h -3.540625 v 0.73046875 Z "/>
          </symbol>
          <symbol id="g84C7B5C1F278A31AAE1D04BE1A5F65BF" overflow="visible">
              <path d="M 0 0m 3.3343751 3.4332032 q 0.6316407 -0.16757822 0.96679664 -0.59511733 q 0.33515644 -0.42753887 0.33515644 -1.0677733 q 0 -0.8851563 -0.5951171 -1.3900391 q -0.59511733 -0.5048828 -1.6478517 -0.5048828 q -0.44257808 0 -0.90234375 0.08164063 q -0.45976567 0.08164063 -0.9023438 0.23632813 v 0.8636719 q 0.43828124 -0.22773439 0.86367196 -0.33945316 q 0.4253906 -0.111718714 0.8464843 -0.111718714 q 0.7132814 0 1.0957031 0.32226563 q 0.38242197 0.32226563 0.38242197 0.928125 q 0 0.55859375 -0.38242197 0.8873048 q -0.38242173 0.3287108 -1.0355468 0.3287108 h -0.66171885 v 0.7132814 h 0.66171885 q 0.5972655 0 0.9324219 0.26210952 q 0.3351562 0.26210928 0.3351562 0.73046875 q 0 0.49414063 -0.31152344 0.75839806 q -0.31152344 0.2642579 -0.8873048 0.2642579 q -0.38242173 0 -0.790625 -0.0859375 q -0.40820313 -0.0859375 -0.85507816 -0.2578125 v 0.79921865 q 0.51992196 0.13750029 0.9259766 0.20625019 q 0.40605474 0.068749905 0.71972656 0.068749905 q 0.93671894 0 1.4974611 -0.47050762 q 0.56074214 -0.4705081 0.56074214 -1.2482424 q 0 -0.52851534 -0.29433584 -0.8808594 q -0.29433608 -0.35234356 -0.8572266 -0.4984374 Z "/>
          </symbol>
          <symbol id="g74EC6ABE78335022B20647BD62A55DA2" overflow="visible">
              <path d="M 0 0m 4.258203 6.2734375 v -0.79921865 q -0.27070284 0.15898418 -0.5757811 0.24277353 q -0.30507803 0.08378887 -0.63593745 0.08378887 q -0.82500005 0 -1.2503906 -0.62089825 q -0.42539072 -0.6208987 -0.42539072 -1.8283205 q 0.20625007 0.4296875 0.57148445 0.6595702 q 0.36523438 0.2298832 0.8378906 0.2298832 q 0.92812514 0 1.4373047 -0.5693362 q 0.5091796 -0.56933594 0.5091796 -1.6134765 q 0 -1.0398438 -0.52421856 -1.6113282 q -0.5242188 -0.5714844 -1.4738283 -0.5714844 q -1.1171875 0 -1.6371094 0.80136716 q -0.51992184 0.80136716 -0.51992184 2.524414 q 0 1.624219 0.6251953 2.4771485 q 0.6251954 0.8529296 1.8111328 0.8529296 q 0.31796885 0 0.6359377 -0.06660128 q 0.3179686 -0.06660175 0.61445284 -0.19121122 Z m -1.5468748 -2.711328 q -0.554297 0 -0.8722657 -0.39960933 q -0.31796885 -0.39960957 -0.31796885 -1.1042969 q 0 -0.7046876 0.31796885 -1.1042969 q 0.31796873 -0.3996094 0.8722657 -0.3996094 q 0.5757811 0 0.8679688 0.3802734 q 0.29218745 0.38027346 0.29218745 1.1236329 q 0 0.7476561 -0.29218745 1.1257813 q -0.2921877 0.37812495 -0.8679688 0.37812495 Z "/>
          </symbol>
          <symbol id="gB9B7546EC337A3A025880ABDA053EB8E" overflow="visible">
              <path d="M 0 0m 1.4953126 6.677344 h 0.6874999 q 0.64882827 -1.0140624 0.9667969 -1.985156 q 0.31796885 -0.9710939 0.31796885 -1.9292972 q 0 -0.96679676 -0.31796885 -1.9378905 q -0.3179686 -0.9710938 -0.9667969 -1.9851563 h -0.6874999 q 0.57148445 0.996875 0.8529297 1.9722657 q 0.28144526 0.9753906 0.28144526 1.9507811 q 0 0.9796877 -0.28144526 1.9550784 q -0.28144526 0.97539043 -0.8529297 1.9593749 Z "/>
          </symbol>
      </defs>
  </svg>
  </div></div>
  ```
