crates/jupytypst/tests/snapshots/kernel_snapshots__page_setup_default.snap
---
source: crates/jupytypst/tests/kernel_snapshots.rs
expression: "run_case(KernelCase\n{\n    init:\n    KernelInit::new(RenderMode::Svg, SourceMode::Markup).with_page_setup(\"\"),\n    fixtures: vec![], requests:\n    vec![Request::Execute\n    { input: r#\"#set page(paper: \"a4\")\n                    test in a4\"# },\n    Request::Execute { input: \"test\" },],\n})"
---
init:
  default_format: Svg
  source_mode: Markup
  page_setup: |
  ```typc
  ```
  inputs: []

--- request 1 ---
kind: execute
input: |
  ```typ
  #set page(paper: "a4")
                      test in a4
  ```
effective_format: Svg
status: ok
warnings: []
output_kind: svg
output: |
  ```html
  <style>
  .jupytypst-pages {
    display: flex;
    flex-direction: column;
    gap: 12px;
    align-items: flex-start;
  }
  .jupytypst-page {
    max-width: 100%;
    overflow: auto;
  }
  .jupytypst-page > svg {
    display: block;
    max-width: 100%;
    height: auto;
  }
  </style>
  <div class="jupytypst-pages"><div class="jupytypst-page"><svg class="typst-doc" viewBox="0 0 595.2755905511812 841.8897637795276" width="595.2755905511812pt" height="841.8897637795276pt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:h5="http://www.w3.org/1999/xhtml">
      <path class="typst-shape" fill="#ffffff" fill-rule="nonzero" d="M 0 0v 841.8898 h 595.2756 v -841.8898 Z "/>
      <g>
          <g class="typst-text" transform="matrix(1 0 0 -1 70.86614173228347 78.10414173228347)">
              <use xlink:href="#g55001E27B5AEDEA47687C2C9DE9B6F28" x="0" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#gA03E9C6FC96AAD8F926083AB0A66F7F2" x="3.476" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#gEA195BF2B82421E519C84C8C53F076D5" x="8.393" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#g55001E27B5AEDEA47687C2C9DE9B6F28" x="12.683" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#g7B9382C50142444122C7E61860C74A3E" x="18.909" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#gF8FCA0896B38DDADA2F6EAE681C91871" x="21.89" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#g4EA807C313B946E39B85B919273287E7" x="30.602" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#gAB0E5147497681B6393FEECC727B1D34" x="35.629" y="0" fill="#000000" fill-rule="nonzero"/>
          </g>
      </g>
      <defs id="glyph">
          <symbol id="g55001E27B5AEDEA47687C2C9DE9B6F28" overflow="visible">
              <path d="M 0 0m 0.473 4.719 c -0.15399998 0 -0.19799998 -0.13199997 -0.19799998 -0.21999979 v -0.14300013 c 0 -0.05499983 0.011000007 -0.065999985 0.054999977 -0.065999985 h 0.649 v -3.3109999 c 0 -0.78099996 0.34099996 -1.089 0.847 -1.089 c 0.50600004 0 1.056 0.242 1.4849999 0.726 c -0.021999836 0.110000014 -0.08799982 0.176 -0.19799995 0.18699998 c -0.286 -0.21999997 -0.61599994 -0.30799997 -0.90199995 -0.30799997 c -0.29699993 0 -0.36299992 0.32999998 -0.36299992 1.012 v 2.783 h 1.144 c 0.109999895 0 0.26399994 0.04400015 0.26399994 0.14300013 v 0.21999979 c 0 0.04400015 -0.032999992 0.065999985 -0.08800006 0.065999985 h -1.3199999 v 0.4289999 c 0 0.71500015 0.04399991 1.1550002 0.04399991 1.1550002 c 0 0.065999985 -0.032999992 0.09899998 -0.08799994 0.09899998 c -0.04400003 0 -0.143 -0.04400015 -0.24199998 -0.09899998 c -0.12100005 -0.065999985 -0.23100007 -0.12099981 -0.37400007 -0.1539998 c -0.13199997 -0.04400015 -0.24199998 -0.07700014 -0.24199998 -0.15400028 c 0 -0.13199997 0.032999992 -0.05499983 0.032999992 -1.276 Z "/>
          </symbol>
          <symbol id="gA03E9C6FC96AAD8F926083AB0A66F7F2" overflow="visible">
              <path d="M 0 0m 4.246 1.023 c -0.40699983 -0.41799998 -0.72599983 -0.594 -1.3639998 -0.594 c -0.3959999 0 -0.85800004 0.23099998 -1.199 0.79199994 c -0.22000003 0.36300004 -0.352 0.86899996 -0.352 1.507 l 2.926 -0.021999836 c 0.13199997 0 0.20900011 0.065999985 0.20900011 0.1869998 c 0 0.924 -0.32999992 1.9140003 -1.8590002 1.9140003 c -0.9569999 0 -2.1999998 -0.9130001 -2.1999998 -2.5850003 c 0 -0.61599994 0.15399998 -1.2099999 0.517 -1.6279999 c 0.37399995 -0.44 0.8909999 -0.704 1.6829998 -0.704 c 0.8360002 0 1.4300003 0.385 1.8699999 0.957 c -0.032999992 0.110000014 -0.09899998 0.16499996 -0.23099995 0.176 Z m -2.882 2.079 c 0.20899999 1.2429998 0.979 1.3419998 1.2429999 1.3419998 c 0.41800022 0 0.9130001 -0.23099995 0.9130001 -1.1549997 c 0 -0.09899998 -0.04399991 -0.15400004 -0.16499996 -0.15400004 Z "/>
          </symbol>
          <symbol id="gEA195BF2B82421E519C84C8C53F076D5" overflow="visible">
              <path d="M 0 0m 0.528 1.518 c 0.04400003 -0.53900003 0.07700002 -1.056 0.07700002 -1.518 c 0.109999955 0.022 0.21999997 0.033 0.27499998 0.033 c 0.07700002 0 0.143 0 0.22000003 -0.022 c 0.29699993 -0.077 0.594 -0.121 1.001 -0.121 c 0.61599994 0 1.7489998 0.297 1.7489998 1.386 c 0 0.7479999 -0.53900003 1.188 -1.287 1.463 c -0.65999997 0.25300002 -1.1 0.41799998 -1.1 1.023 c 0 0.45099974 0.39600003 0.704 0.7700001 0.704 c 0.24199986 0 0.8799999 -0.0880003 1.023 -1.023 c 0.065999985 -0.065999985 0.286 -0.055000067 0.352 0.010999918 c 0.032999992 0.3959999 0.05499983 0.803 0.065999985 1.1659999 c -0.34100008 0.055000305 -0.86899996 0.20900011 -1.441 0.20900011 c -0.814 0 -1.5510001 -0.5279999 -1.5510001 -1.2320001 c 0 -0.803 0.36299998 -1.1439998 1.21 -1.4959998 c 0.9130001 -0.37400007 1.122 -0.605 1.122 -1.0780001 c 0 -0.53900003 -0.5279999 -0.77 -0.93499994 -0.77 c -0.42900002 0 -0.671 0.143 -0.781 0.26400003 c -0.24199998 0.25299996 -0.36299998 0.7369999 -0.42899996 1.0120001 c -0.066000044 0.065999985 -0.27500004 0.054999948 -0.34100002 -0.011000037 Z "/>
          </symbol>
          <symbol id="g7B9382C50142444122C7E61860C74A3E" overflow="visible">
              <path d="M 0 0m 1.9909999 1.342 v 2.189 c 0 0.54999995 0.04400015 1.254 0.04400015 1.254 c 0 0.04400015 -0.055000067 0.07700014 -0.14300013 0.07700014 c -0.30799997 -0.12099981 -0.7479999 -0.21999979 -1.507 -0.31900024 c -0.021999985 -0.065999985 0 -0.24199963 0.022000015 -0.3079996 c 0.60499996 -0.055000305 0.715 -0.12100029 0.715 -0.74800014 v -2.145 c 0 -0.913 -0.12099993 -0.946 -0.792 -1.001 c -0.065999985 -0.065999985 -0.065999985 -0.297 0 -0.36299998 c 0.36300004 0.011 0.792 0.022 1.2320001 0.022 c 0.44000006 0 0.85800004 -0.011 1.221 -0.022 c 0.065999985 0.066 0.065999985 0.297 0 0.36299998 c -0.671 0.044 -0.79200006 0.088 -0.79200006 1.001 Z m -1.0009999 5.2469997 c 0 -0.28599977 0.26399994 -0.57199955 0.528 -0.57199955 c 0.30799997 0 0.5719999 0.29699993 0.5719999 0.5279999 c 0 0.26399994 -0.23099995 0.572 -0.5279999 0.572 c -0.26400006 0 -0.572 -0.26399994 -0.572 -0.52800035 Z "/>
          </symbol>
          <symbol id="gF8FCA0896B38DDADA2F6EAE681C91871" overflow="visible">
              <path d="M 0 0m 2.024 3.938 c -0.065999985 -0.0769999 -0.13199997 -0.09899998 -0.13199997 0 c -0.010999918 0.29700017 -0.032999992 0.7260001 -0.08799994 0.8360002 c -0.022000074 0.05499983 -0.04400003 0.08799982 -0.13200009 0.08799982 c -0.30799997 -0.12099981 -0.594 -0.21999979 -1.3529999 -0.31900024 c -0.022000015 -0.065999985 0 -0.24199963 0.021999985 -0.3079996 c 0.594 -0.055000305 0.71500003 -0.11000013 0.71500003 -0.74800014 v -2.145 c 0 -0.902 -0.110000014 -0.946 -0.77 -1.001 c -0.066000015 -0.065999985 -0.066000015 -0.297 0 -0.36299998 c 0.32999998 0.011 0.77 0.022 1.21 0.022 c 0.43999994 0 0.77 -0.011 1.0999999 -0.022 c 0.065999985 0.066 0.065999985 0.297 0 0.36299998 c -0.5609999 0.055000007 -0.671 0.09900001 -0.671 1.001 v 1.8039999 c 0 0.23100019 0.09899998 0.36300015 0.18700004 0.46200013 c 0.41799998 0.40699983 0.9130001 0.6489999 1.342 0.6489999 c 0.22000003 0 0.45099998 -0.14300013 0.5830002 -0.3959999 c 0.10999966 -0.22000003 0.13199997 -0.5170002 0.13199997 -0.8470001 v -1.6719999 c 0 -0.902 -0.11000013 -0.946 -0.68200016 -1.001 c -0.055000067 -0.065999985 -0.055000067 -0.297 0 -0.36299998 c 0.32999992 0.011 0.68200016 0.022 1.1220002 0.022 c 0.43999958 0 0.83599997 -0.011 1.1659999 -0.022 c 0.05499983 0.066 0.05499983 0.297 0 0.36299998 c -0.6160002 0.055000007 -0.737 0.09900001 -0.737 1.001 v 1.6389999 c 0 0.605 -0.04400015 1.1329999 -0.29699993 1.474 c -0.18700027 0.2420001 -0.52800035 0.37400007 -0.9130001 0.37400007 c -0.53900003 0 -1.155 -0.14300013 -1.8040001 -0.89100003 Z "/>
          </symbol>
          <symbol id="g4EA807C313B946E39B85B919273287E7" overflow="visible">
              <path d="M 0 0m 3.223 0.528 c 0.065999985 -0.341 0.18700004 -0.638 0.737 -0.638 c 0.41799974 0 0.8140001 0.187 1.0450001 0.407 c -0.022000313 0.132 -0.065999985 0.231 -0.18700027 0.297 c -0.076999664 -0.065999985 -0.26399994 -0.176 -0.40700006 -0.176 c -0.31899977 0 -0.32999992 0.42900002 -0.32999992 0.93500006 v 1.617 c 0 1.562 -0.8579998 1.859 -1.6609998 1.859 c -0.90200007 0 -1.815 -0.59399986 -1.815 -1.221 c 0 -0.26400018 0.13199997 -0.39600015 0.385 -0.39600015 c 0.319 0 0.51699996 0.23100019 0.51699996 0.37400007 c 0 0.0769999 -0.010999918 0.15400004 -0.032999992 0.19799995 c -0.011000037 0.032999992 -0.021999955 0.09899998 -0.021999955 0.22000027 c 0 0.3409996 0.462 0.4619999 0.88 0.4619999 c 0.37400007 0 0.89100003 -0.18700027 0.89100003 -1.4300001 c 0 -0.07700014 -0.032999992 -0.12100005 -0.065999985 -0.13199997 l -0.9460001 -0.23099995 c -1.056 -0.26400018 -1.8149999 -0.8470001 -1.8149999 -1.5950001 c 0 -0.90199995 0.61599994 -1.188 1.3859999 -1.188 c 0.3850001 0 0.71500003 0.088 1.199 0.462 l 0.22000003 0.176 Z m 0 2.0349998 v -1.452 c 0 -0.14299995 -0.065999985 -0.21999997 -0.15400004 -0.28599995 c -0.286 -0.231 -0.6600001 -0.484 -0.96799994 -0.484 c -0.5500001 0 -0.79200006 0.44000003 -0.79200006 0.781 c 0 0.495 0.23099995 1.0009999 1.0450001 1.21 Z "/>
          </symbol>
          <symbol id="gAB0E5147497681B6393FEECC727B1D34" overflow="visible">
              <path d="M 0 0m 4.73 2.409 h -0.9130001 v 3.212 c 0 0.5500002 0 0.9790001 0.022000074 1.0669999 l -0.022000074 0.022000313 h -0.352 c -0.0769999 0 -0.13199997 -0.065999985 -0.17599988 -0.12100029 c -0.6930001 -0.84699965 -1.9690001 -2.6619997 -2.981 -4.2349997 c 0.032999992 -0.1650002 0.09900001 -0.46200013 0.429 -0.46200013 h 2.244 v -1.012 c 0 -0.506 -0.41799998 -0.506 -0.89100003 -0.53900003 c -0.065999985 -0.065999985 -0.065999985 -0.297 0 -0.36299998 c 0.352 0.011 0.79200006 0.022 1.2980001 0.022 c 0.4289999 0 0.8470001 -0.011 1.1989999 -0.022 c 0.065999985 0.066 0.065999985 0.297 0 0.36299998 c -0.53900003 0.044 -0.77 0.022000015 -0.77 0.53900003 v 1.012 h 0.7590003 c 0.1539998 0 0.31899977 0.20900011 0.31899977 0.34100008 c 0 0.109999895 -0.04400015 0.17599988 -0.16499996 0.17599988 Z m -1.7490001 3.1680002 v -3.1680002 h -2.1009998 c 0.561 0.90199995 1.3419999 2.1339998 2.1009998 3.1680002 Z "/>
          </symbol>
      </defs>
  </svg>
  </div></div>
  ```

--- request 2 ---
kind: execute
input: |
  ```typ
  test
  ```
effective_format: Svg
status: ok
warnings: []
output_kind: svg
output: |
  ```html
  <style>
  .jupytypst-pages {
    display: flex;
    flex-direction: column;
    gap: 12px;
    align-items: flex-start;
  }
  .jupytypst-page {
    max-width: 100%;
    overflow: auto;
  }
  .jupytypst-page > svg {
    display: block;
    max-width: 100%;
    height: auto;
  }
  </style>
  <div class="jupytypst-pages"><div class="jupytypst-page"><svg class="typst-doc" viewBox="0 0 595.2755905511812 841.8897637795276" width="595.2755905511812pt" height="841.8897637795276pt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:h5="http://www.w3.org/1999/xhtml">
      <path class="typst-shape" fill="#ffffff" fill-rule="nonzero" d="M 0 0v 841.8898 h 595.2756 v -841.8898 Z "/>
      <g>
          <g class="typst-text" transform="matrix(1 0 0 -1 70.86614173228347 78.10414173228347)">
              <use xlink:href="#g55001E27B5AEDEA47687C2C9DE9B6F28" x="0" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#gA03E9C6FC96AAD8F926083AB0A66F7F2" x="3.476" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#gEA195BF2B82421E519C84C8C53F076D5" x="8.393" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#g55001E27B5AEDEA47687C2C9DE9B6F28" x="12.683" y="0" fill="#000000" fill-rule="nonzero"/>
          </g>
      </g>
      <defs id="glyph">
          <symbol id="g55001E27B5AEDEA47687C2C9DE9B6F28" overflow="visible">
              <path d="M 0 0m 0.473 4.719 c -0.15399998 0 -0.19799998 -0.13199997 -0.19799998 -0.21999979 v -0.14300013 c 0 -0.05499983 0.011000007 -0.065999985 0.054999977 -0.065999985 h 0.649 v -3.3109999 c 0 -0.78099996 0.34099996 -1.089 0.847 -1.089 c 0.50600004 0 1.056 0.242 1.4849999 0.726 c -0.021999836 0.110000014 -0.08799982 0.176 -0.19799995 0.18699998 c -0.286 -0.21999997 -0.61599994 -0.30799997 -0.90199995 -0.30799997 c -0.29699993 0 -0.36299992 0.32999998 -0.36299992 1.012 v 2.783 h 1.144 c 0.109999895 0 0.26399994 0.04400015 0.26399994 0.14300013 v 0.21999979 c 0 0.04400015 -0.032999992 0.065999985 -0.08800006 0.065999985 h -1.3199999 v 0.4289999 c 0 0.71500015 0.04399991 1.1550002 0.04399991 1.1550002 c 0 0.065999985 -0.032999992 0.09899998 -0.08799994 0.09899998 c -0.04400003 0 -0.143 -0.04400015 -0.24199998 -0.09899998 c -0.12100005 -0.065999985 -0.23100007 -0.12099981 -0.37400007 -0.1539998 c -0.13199997 -0.04400015 -0.24199998 -0.07700014 -0.24199998 -0.15400028 c 0 -0.13199997 0.032999992 -0.05499983 0.032999992 -1.276 Z "/>
          </symbol>
          <symbol id="gA03E9C6FC96AAD8F926083AB0A66F7F2" overflow="visible">
              <path d="M 0 0m 4.246 1.023 c -0.40699983 -0.41799998 -0.72599983 -0.594 -1.3639998 -0.594 c -0.3959999 0 -0.85800004 0.23099998 -1.199 0.79199994 c -0.22000003 0.36300004 -0.352 0.86899996 -0.352 1.507 l 2.926 -0.021999836 c 0.13199997 0 0.20900011 0.065999985 0.20900011 0.1869998 c 0 0.924 -0.32999992 1.9140003 -1.8590002 1.9140003 c -0.9569999 0 -2.1999998 -0.9130001 -2.1999998 -2.5850003 c 0 -0.61599994 0.15399998 -1.2099999 0.517 -1.6279999 c 0.37399995 -0.44 0.8909999 -0.704 1.6829998 -0.704 c 0.8360002 0 1.4300003 0.385 1.8699999 0.957 c -0.032999992 0.110000014 -0.09899998 0.16499996 -0.23099995 0.176 Z m -2.882 2.079 c 0.20899999 1.2429998 0.979 1.3419998 1.2429999 1.3419998 c 0.41800022 0 0.9130001 -0.23099995 0.9130001 -1.1549997 c 0 -0.09899998 -0.04399991 -0.15400004 -0.16499996 -0.15400004 Z "/>
          </symbol>
          <symbol id="gEA195BF2B82421E519C84C8C53F076D5" overflow="visible">
              <path d="M 0 0m 0.528 1.518 c 0.04400003 -0.53900003 0.07700002 -1.056 0.07700002 -1.518 c 0.109999955 0.022 0.21999997 0.033 0.27499998 0.033 c 0.07700002 0 0.143 0 0.22000003 -0.022 c 0.29699993 -0.077 0.594 -0.121 1.001 -0.121 c 0.61599994 0 1.7489998 0.297 1.7489998 1.386 c 0 0.7479999 -0.53900003 1.188 -1.287 1.463 c -0.65999997 0.25300002 -1.1 0.41799998 -1.1 1.023 c 0 0.45099974 0.39600003 0.704 0.7700001 0.704 c 0.24199986 0 0.8799999 -0.0880003 1.023 -1.023 c 0.065999985 -0.065999985 0.286 -0.055000067 0.352 0.010999918 c 0.032999992 0.3959999 0.05499983 0.803 0.065999985 1.1659999 c -0.34100008 0.055000305 -0.86899996 0.20900011 -1.441 0.20900011 c -0.814 0 -1.5510001 -0.5279999 -1.5510001 -1.2320001 c 0 -0.803 0.36299998 -1.1439998 1.21 -1.4959998 c 0.9130001 -0.37400007 1.122 -0.605 1.122 -1.0780001 c 0 -0.53900003 -0.5279999 -0.77 -0.93499994 -0.77 c -0.42900002 0 -0.671 0.143 -0.781 0.26400003 c -0.24199998 0.25299996 -0.36299998 0.7369999 -0.42899996 1.0120001 c -0.066000044 0.065999985 -0.27500004 0.054999948 -0.34100002 -0.011000037 Z "/>
          </symbol>
      </defs>
  </svg>
  </div></div>
  ```
